Log in activity added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#4096FF</color>
-    <color name="colorPrimaryDark">#0164DA</color>
+    <!-- <color name="colorPrimary">#4096FF</color>-->
+    <color name="colorPrimaryDark">#4096FF</color>
     <color name="colorAccent">#f4d160</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
