--- a/app/src/main/res/layout/activity_customer_login.xml
+++ b/app/src/main/res/layout/activity_customer_login.xml
@@ -111,6 +111,18 @@
                 android:text="@string/create_account"
                 android:textAllCaps="false"/>
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="40dp"/>
+            <Button
+                android:id="@+id/signupsellerLink"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:textColor="@color/colorPrimary"
+                android:text="@string/create_seller_account"
+                android:textAllCaps="false"/>
+
         </LinearLayout>
     </LinearLayout>
 
