--- a/app/src/main/res/layout/activity_customer_login.xml
+++ b/app/src/main/res/layout/activity_customer_login.xml
@@ -104,7 +104,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="20dp"/>
             <Button
-                android:id="@+id/signupLink"
+                android:id="@+id/createaccLink"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
@@ -115,7 +115,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"/>
             <Button
-                android:id="@+id/signupsellerLink"
+                android:id="@+id/createselleraccLink"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
