--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -9,14 +9,31 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:gravity="top">
 
         <EditText
             android:id="@+id/searchButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/title_search"
-            android:background="@drawable/round_corner"/>
+            android:layout_width="350dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="20sp"
+            android:background="@drawable/sea_round_corner"
+            android:fontFamily="@font/nunito"
+            android:paddingLeft="20dp"
+            android:hint="@string/title_search"
+            android:textColorHint="#999999"
+            android:textSize="20sp" />
+
+        <ImageButton
+            android:id="@+id/search_people_btn"
+            android:layout_width="50dp"
+            android:layout_height="52dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="20dp"
+            android:layout_toRightOf="@+id/search_people"
+            android:src="@drawable/search_button"
+            android:background="@color/white"
+            android:scaleType="fitCenter"/>
+
+        <!--android:src="@drawable/search_button"-->
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
