--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorAccent">#f4d160</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
+    <color name="darkBlue">#162e4c</color>
 </resources>
