--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -32,7 +32,8 @@
         android:src="@drawable/design_settings"
         android:layout_below="@id/profileName"
         android:scaleX="1.4"
-        android:scaleY="1.2"/>
+        android:scaleY="1.2"
+        android:contentDescription="@string/design" />
 
     <ScrollView
         android:layout_below="@id/desi"
@@ -56,7 +57,8 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/myprofileicon"
-            android:layout_marginStart="30dp"/>
+            android:layout_marginStart="30dp"
+            android:contentDescription="@string/profile" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -72,8 +74,6 @@
         android:layout_width="370dp"
         android:layout_height="1dp"
         android:background="@color/darkBlue"
-        android:layout_below="@+id/linearl0"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"/>
 
     <LinearLayout
@@ -81,14 +81,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_below="@id/linearl0"
         android:layout_marginTop="30dp">
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/carticon"
-            android:layout_marginStart="30dp"/>
+            android:layout_marginStart="30dp"
+            android:contentDescription="@string/my_cart" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -104,8 +104,6 @@
         android:layout_width="370dp"
         android:layout_height="1dp"
         android:background="@color/darkBlue"
-        android:layout_below="@+id/linearl1"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"/>
 
     <LinearLayout
@@ -113,14 +111,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_below="@id/linearl1"
         android:layout_marginTop="30dp">
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/favoritesicon"
-            android:layout_marginStart="30dp"/>
+            android:layout_marginStart="30dp"
+            android:contentDescription="@string/favourites" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -136,8 +134,6 @@
         android:layout_width="370dp"
         android:layout_height="1dp"
         android:background="@color/darkBlue"
-        android:layout_below="@+id/linearl2"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"/>
 
     <LinearLayout
@@ -145,14 +141,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_below="@id/linearl2"
         android:layout_marginTop="30dp">
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/orderhistoryicon"
-            android:layout_marginStart="30dp"/>
+            android:layout_marginStart="30dp"
+            android:contentDescription="@string/order_history" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -168,8 +164,6 @@
         android:layout_width="370dp"
         android:layout_height="1dp"
         android:background="@color/darkBlue"
-        android:layout_below="@+id/linearl3"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="5dp"/>
 
     <LinearLayout
@@ -177,14 +171,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_below="@id/linearl3"
         android:layout_marginTop="30dp">
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/paymenthistoryicon"
-            android:layout_marginStart="30dp"/>
+            android:layout_marginStart="30dp"
+            android:contentDescription="@string/payment_history" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -200,8 +194,6 @@
                 android:layout_width="370dp"
                 android:layout_height="1dp"
                 android:background="@color/darkBlue"
-                android:layout_below="@+id/linearl4"
-                android:layout_centerHorizontal="true"
                 android:layout_marginTop="5dp"/>
 
             <LinearLayout
@@ -209,14 +201,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_below="@id/linearl4"
                 android:layout_marginTop="30dp">
 
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/devicon"
-                    android:layout_marginStart="30dp"/>
+                    android:layout_marginStart="30dp"
+                    android:contentDescription="@string/contact_dev" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -231,8 +223,6 @@
                 android:layout_width="370dp"
                 android:layout_height="1dp"
                 android:background="@color/darkBlue"
-                android:layout_below="@+id/linearl5"
-                android:layout_centerHorizontal="true"
                 android:layout_marginTop="5dp"/>
 
             <LinearLayout
@@ -240,14 +230,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_below="@id/linearl5"
                 android:layout_marginTop="30dp">
 
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/helpicon"
-                    android:layout_marginStart="30dp"/>
+                    android:layout_marginStart="30dp"
+                    android:contentDescription="@string/help" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -262,8 +252,6 @@
                 android:layout_width="370dp"
                 android:layout_height="1dp"
                 android:background="@color/darkBlue"
-                android:layout_below="@+id/linearl6"
-                android:layout_centerHorizontal="true"
                 android:layout_marginTop="5dp"/>
 
             <LinearLayout
@@ -271,14 +259,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_below="@id/linearl6"
                 android:layout_marginTop="30dp">
 
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/logouticon"
-                    android:layout_marginStart="30dp"/>
+                    android:layout_marginStart="30dp"
+                    android:contentDescription="@string/log_out" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -295,7 +283,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_below="@id/linearl7"
                 android:layout_marginTop="30dp">
 
 
@@ -303,7 +290,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:text="Mock option"
+                    android:text="@string/design"
                     android:textColor="@color/black"
                     android:textSize="16sp"
                     android:layout_marginTop="5dp"
