Added UI for creating account

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".forgot_password">
 
     <LinearLayout
@@ -29,12 +30,13 @@
             android:gravity="center">
 
             <TextView
-                android:layout_height="50dp"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
                 android:text="@string/reset_pass"
-                android:textSize="30sp"
+                android:textColor="@color/black"
                 android:fontFamily="@font/nunito"
-                android:textColor="@color/colorPrimaryDark"/>
+                android:textSize="22sp"/>
 
            <!-- <ImageView
                 android:layout_width="400dp"
@@ -52,17 +54,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="@string/email"
+                    android:inputType="textEmailAddress"
                     android:textColorLink="@color/black"
-                    android:textSize="23sp" />
+                    android:textSize="19sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="0dp"/>
+                android:layout_height="20dp"/>
             <Button
                 android:id="@+id/sentmailButton"
-                android:layout_width="300dp"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
                 android:text="@string/receive_link"
