--- a/app/src/main/res/layout/activity_create_account_customer.xml
+++ b/app/src/main/res/layout/activity_create_account_customer.xml
@@ -42,6 +42,7 @@
             android:textColor="@color/black"
             android:fontFamily="@font/nunito"
             android:paddingStart="10dp"
+            android:inputType="textEmailAddress"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:textSize="19sp" />
@@ -49,6 +50,23 @@
         <Space
             android:layout_width="match_parent"
             android:layout_height="20dp"/>
+
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="300dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/round_corner_hollow"
+            android:hint="@string/password"
+            android:paddingStart="10dp"
+            android:textColorLink="@color/black"
+            android:inputType="textPassword"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:textSize="19sp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="40dp"/>
 
         <EditText
             android:id="@+id/firstname"
@@ -96,6 +114,7 @@
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:inputType="number"
+            android:maxLength="10"
             android:textColorLink="@color/black"
             android:textColor="@color/black"
             android:fontFamily="@font/nunito"
@@ -112,7 +131,7 @@
             android:paddingStart="60dp"
             android:paddingBottom="6dp"
             android:text="@string/for_order"
-            android:textColor="@color/grey"
+            android:textColor="@color/black"
             android:fontFamily="@font/nunito"
             android:textSize="17sp"/>
 
@@ -145,6 +164,7 @@
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:inputType="number"
+            android:maxLength="6"
             android:textColorLink="@color/black"
             android:textColor="@color/black"
             android:fontFamily="@font/nunito"
@@ -155,10 +175,11 @@
             android:layout_height="25dp"/>
         <Button
             android:id="@+id/createaccButton"
-            android:layout_width="300dp"
+            android:layout_width="200dp"
             android:layout_height="40dp"
             android:text="@string/create_account"
             android:textColor="@color/white"
             android:background="@drawable/round_corner"
-            android:textAllCaps="false" />    </LinearLayout>
+            android:textAllCaps="false" />
+    </LinearLayout>
 </ScrollView>
