--- a/app/src/main/res/layout/activity_customer_login.xml
+++ b/app/src/main/res/layout/activity_customer_login.xml
@@ -78,7 +78,7 @@
                     android:hint="@string/password"
                     android:textColorLink="@color/black"
                     android:inputType="textPassword"
-                    android:textSize="23sp" />
+                    android:textSize="20sp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -108,7 +108,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:text="@string/create_account"
+                android:text="@string/create_n_account"
                 android:textAllCaps="false"/>
 
             <Space
