--- a/app/src/main/res/menu/activity_home_seller_drawer.xml
+++ b/app/src/main/res/menu/activity_home_seller_drawer.xml
@@ -6,15 +6,55 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/home_filled_36"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:icon="@drawable/add_book_36"
+            android:title="@string/menu_addbook" />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:icon="@drawable/remove_book_36"
+            android:title="@string/menu_removebooks" />
+        <item
+            android:id="@+id/nav_booklist"
+            android:icon="@drawable/book_list_36"
+            android:title="@string/menu_booklist" />
+    </group>
+
+    <item android:title="@string/menu_info">
+        <menu>
+            <item
+                android:id="@+id/nav_myprofile"
+                android:icon="@drawable/profile_info_36"
+                android:title="@string/menu_profile" />
+            <item
+                android:id="@+id/nav_current_order"
+                android:icon="@drawable/current_order_36"
+                android:title="@string/menu_current_order" />
+            <item
+                android:id="@+id/nav_order_history"
+                android:icon="@drawable/order_history_36"
+                android:title="@string/menu_history" />
+        </menu>
+    </item>
+
+    <item android:title="@string/menu_options">
+        <menu>
+            <item
+                android:id="@+id/nav_settings"
+                android:icon="@drawable/settings_36"
+                android:title="@string/menu_setting" />
+        </menu>
+    </item>
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_givefeedback"
+            android:icon="@drawable/report_feedback_36"
+            android:title="@string/menu_feedback" />
+        <item
+            android:id="@+id/nav_aboutapp"
+            android:icon="@drawable/about_36"
+            android:title="@string/menu_about" />
     </group>
 </menu>
