--- a/app/src/main/res/layout/fragment_seller_profile.xml
+++ b/app/src/main/res/layout/fragment_seller_profile.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".profile.ProfileCustomer">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.seller_profile.SellerProfileFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,37 +16,27 @@
         android:background="@color/white"
         android:focusableInTouchMode="true">
 
-        <TextView
-            android:id="@+id/ActivityHead"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:text="@string/update_det"
-            android:textColor="@color/black"
-            android:fontFamily="@font/nunito"
-            android:textSize="22sp"/>
-
-        <ProgressBar
-            android:id="@+id/uProgress"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:background="@color/white"
-            android:indeterminate="true"
-            android:visibility="gone" />
-
-
         <Space
             android:layout_width="match_parent"
-            android:layout_height="30dp"/>
+            android:layout_height="20dp"/>
+
+        <TextView
+            android:id="@+id/subtitle0"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="60dp"
+            android:paddingBottom="6dp"
+            android:text="@string/for_owner"
+            android:textColor="@color/black"
+            android:fontFamily="@font/nunito"
+            android:textSize="17sp"/>
 
         <EditText
             android:id="@+id/ufirstname"
             android:layout_width="300dp"
             android:layout_height="match_parent"
             android:background="@drawable/round_corner_hollow"
-            android:hint="@string/f_name"
+            android:hint="@string/owner_f_name"
             android:textColorLink="@color/black"
             android:textColor="@color/black"
             android:fontFamily="@font/nunito"
@@ -65,7 +54,7 @@
             android:layout_width="300dp"
             android:layout_height="match_parent"
             android:background="@drawable/round_corner_hollow"
-            android:hint="@string/l_name"
+            android:hint="@string/owner_l_name"
             android:textColorLink="@color/black"
             android:textColor="@color/black"
             android:fontFamily="@font/nunito"
@@ -79,11 +68,11 @@
             android:layout_height="20dp"/>
 
         <EditText
-            android:id="@+id/uphno"
+            android:id="@+id/uphno_owner"
             android:layout_width="300dp"
             android:layout_height="match_parent"
             android:background="@drawable/round_corner_hollow"
-            android:hint="@string/ph_no"
+            android:hint="@string/owner_ph_no"
             android:paddingStart="10dp"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
@@ -104,10 +93,47 @@
             android:layout_height="wrap_content"
             android:paddingStart="60dp"
             android:paddingBottom="6dp"
-            android:text="@string/for_order"
+            android:text="@string/for_company"
             android:textColor="@color/black"
             android:fontFamily="@font/nunito"
             android:textSize="17sp"/>
+
+        <EditText
+            android:id="@+id/ushopname"
+            android:layout_width="300dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/round_corner_hollow"
+            android:hint="@string/shop_name"
+            android:paddingStart="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:textColorLink="@color/black"
+            android:textColor="@color/black"
+            android:fontFamily="@font/nunito"
+            android:textSize="19sp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp"/>
+
+        <EditText
+            android:id="@+id/ugstno"
+            android:layout_width="300dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/round_corner_hollow"
+            android:hint="@string/GST_no"
+            android:inputType="none"
+            android:paddingStart="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:textColorLink="@color/black"
+            android:textColor="@color/black"
+            android:fontFamily="@font/nunito"
+            android:textSize="19sp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp"/>
 
         <EditText
             android:id="@+id/uaddress"
@@ -143,6 +169,30 @@
             android:textColor="@color/black"
             android:fontFamily="@font/nunito"
             android:textSize="19sp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="20dp"/>
+
+        <EditText
+            android:id="@+id/uphno_company"
+            android:layout_width="300dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/round_corner_hollow"
+            android:hint="@string/ph_no"
+            android:paddingStart="10dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:inputType="number"
+            android:maxLength="10"
+            android:textColorLink="@color/black"
+            android:textColor="@color/black"
+            android:fontFamily="@font/nunito"
+            android:textSize="19sp" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="25dp"/>
 
         <EditText
             android:id="@+id/verifyemail"
