--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -50,9 +50,9 @@
 
     <fragment
         android:id="@+id/nav_myprofile"
-        android:name="com.example.bookcave.ui.slideshow.SlideshowFragment"
+        android:name="com.example.bookcave.ui.seller_profile.SellerProfileFragment"
         android:label="@string/menu_profile"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_seller_profile" />
     <fragment
         android:id="@+id/nav_current_order"
         android:name="com.example.bookcave.ui.slideshow.SlideshowFragment"
