--- a/app/src/main/res/drawable/loading_shape.xml
+++ b/app/src/main/res/drawable/loading_shape.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <solid android:color="#f4f4f4"/>
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:innerRadius="20dp" android:shape="ring" android:thickness="4dp" android:useLevel="false">
+            <solid android:color="#dfdfdf" />
+        </shape>
+    </item>
+</selector>
