--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="white">#ffffff</color>
     <color name="darkBlue">#162e4c</color>
     <color name="red">#FF0000</color>
+    <color name="green">#14AF4D</color>
 
 </resources>
