--- a/app/src/main/res/layout/fragment_seller_pay_history.xml
+++ b/app/src/main/res/layout/fragment_seller_pay_history.xml
@@ -5,18 +5,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".profile.PaymentHistoryC">
+    android:background="@color/lightGrey"
+    tools:context=".ui.seller_history.SellerPayHistoryFragment">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/pullToRefreshPaymentHis"
+        android:id="@+id/pullToRefreshspayhis"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyler_payment_history_c"
+            android:id="@+id/recyler_payment_history_s"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_width="match_parent"/>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
 </LinearLayout>
