--- a/app/src/main/res/layout/row_payment_cus_list.xml
+++ b/app/src/main/res/layout/row_payment_cus_list.xml
@@ -15,31 +15,31 @@
         android:orientation="vertical">
 
     <TextView
-        android:id="@+id/row_bname"
+        android:id="@+id/row_amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLines="3"
-        android:text="Animal Farm"
+        android:text="100 rs"
         android:textColor="@color/black"
         android:textSize="19sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/row_bauthor"
+        android:id="@+id/row_paidon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp"
-        android:text="George Orwell"
+        android:text="on date"
         android:maxLines="2"
         />
 
     <TextView
-        android:id="@+id/row_bprice"
+        android:id="@+id/row_for"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-        android:text="100 INR"
+        android:text="for sherlock holmes"
         android:textSize="16sp"
         android:textColor="#000"
         android:gravity="center" />
@@ -53,7 +53,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/row_bstatus"
+            android:id="@+id/row_pstatus"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:textSize="15sp"
@@ -61,16 +61,6 @@
             android:paddingTop="15sp"
             android:paddingEnd="5sp"
             android:textColor="@color/green"
-            android:text="Delivered" />
-
-        <TextView
-            android:id="@+id/row_updatedon"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:textSize="10sp"
-            android:layout_gravity="end"
-            android:paddingTop="5sp"
-            android:paddingEnd="2sp"
-            android:text="" />
+            android:text="Paid" />
     </LinearLayout>
 </LinearLayout>
