--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -60,9 +60,9 @@
         tools:layout="@layout/fragment_slideshow" />
     <fragment
         android:id="@+id/nav_order_history"
-        android:name="com.example.bookcave.ui.slideshow.SlideshowFragment"
+        android:name="com.example.bookcave.ui.seller_history.SellerPayHistoryFragment"
         android:label="@string/menu_history"
-        tools:layout="@layout/fragment_slideshow" />
+        tools:layout="@layout/fragment_seller_pay_history" />
     <fragment
         android:id="@+id/nav_givefeedback"
         android:name="com.example.bookcave.ui.contactdev.ContactDeveloperFragment"
