--- a/app/src/main/res/layout/row_order_cus_list.xml
+++ b/app/src/main/res/layout/row_order_cus_list.xml
@@ -10,7 +10,7 @@
     android:id="@+id/container">
 
     <LinearLayout
-        android:layout_width="300dp"
+        android:layout_width="270dp"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
@@ -47,9 +47,10 @@
 
     <LinearLayout
 
-        android:layout_width="100dp"
+        android:layout_width="130dp"
         android:layout_height="match_parent"
-        android:layout_gravity="right"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
@@ -57,20 +58,17 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:textSize="15sp"
-            android:layout_gravity="end"
-            android:paddingTop="15sp"
-            android:paddingEnd="5sp"
-            android:textColor="@color/green"
-            android:text="Delivered" />
+            android:layout_gravity="center"
+            android:textColor="@color/green"/>
 
         <TextView
             android:id="@+id/row_updatedon"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:textSize="10sp"
-            android:layout_gravity="end"
-            android:paddingTop="5sp"
-            android:paddingEnd="2sp"
+            android:textSize="12sp"
+            android:layout_marginStart="17sp"
+            android:layout_gravity="center"
             android:text="" />
+
     </LinearLayout>
 </LinearLayout>
